N8N/n8n100/templates/n8n-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: auto-srv
spec:
  selector:
    app: n8n
  ports:
    - name: http
      port: 80
      targetPort: 5678
  type: ClusterIP
